--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id"
+      content="748886632066-kdi7pr621h7m4dvrg6mt7p5j85kphpus.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>tb-vue-boilerplate</title>
