fb plugin added as dependency

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
 
+    <meta name="facebook-signin-app_id" content="615996065493980">
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id"
       content="748886632066-kdi7pr621h7m4dvrg6mt7p5j85kphpus.apps.googleusercontent.com">
