--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="facebook-signin-app_id" content="615996065493980">
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id"
-      content="748886632066-kdi7pr621h7m4dvrg6mt7p5j85kphpus.apps.googleusercontent.com">
+      content="713467414442-6nvpanrv6jnss1an42r1k4t39q0qg1go.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
@@ -14,6 +14,6 @@
     <title>tb-vue-boilerplate</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root-container"></div>
   </body>
 </html>
