--- a/index.html
+++ b/index.html
@@ -2,18 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-
-    <meta name="facebook-signin-app_id" content="615996065493980">
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id"
-      content="713467414442-6nvpanrv6jnss1an42r1k4t39q0qg1go.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>tb-vue-boilerplate</title>
   </head>
   <body>
-    <div id="root-container"></div>
+    <div id="app-container"></div>
   </body>
 </html>
