--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <script src='https://www.google.com/recaptcha/api.js?render=6LdbLa4ZAAAAAANU86OKpQ5TSTsdzKhCt8fdtmTy'></script>
   </head>
   <body>
     <noscript>
